# frappebr

./: .gitignore  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TODO.md  __init__.py  cli.py  debug_ssh.py  demo.py  install.py  pyproject.toml  requirements.txt  run.py  test_backup.py  test_basic.py  test_bench_command.py  test_bench_discovery.py  test_validation.py
core/: __init__.py  backup_manager.py  restore_manager.py  site_manager.py  ssh_manager.py  transfer_manager.py
models/: __init__.py  config.py
tests/: __init__.py  test_ssh_manager.py
ui/: __init__.py  console.py
utils/: __init__.py  crypto.py  ssh_config.py
